Bug 128646 - FILEOPEN DOCX Missing image in table cell anchored to text (don't hide not hidden shape which is anchored to a hidden empty cell paragraph)
Summary: FILEOPEN DOCX Missing image in table cell anchored to text (don't hide not hi...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5 all versions
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2019-11-07 10:37 UTC by NISZ LibreOffice Team
Modified: 2020-09-23 14:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot of the original document side by side in Word and Writer. (147.75 KB, image/png)
2019-11-07 10:38 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-07 10:37:32 UTC
Description:
In attachment  #129129 [details] from bug #104260 there is a smaller logo in each table cell anchored to the end of cell marker. 
These images do not appear in Writer when the document is opened, although selecting all contents of the table cell and removing direct formatting shows the images.


Steps to Reproduce:
1.	Open attachment  #129129 [details] in Writer
2.	Notice the small logo in the bottom left corner of cells is not visible
3.	Select all text in a cell with the mouse and remove all direct formatting


Actual Results:
The small logo appears in the bottom left corner

Expected Results:
The small logo should be visible on opening too.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha1+ (x86)
Build ID: 80109586e6cb6d3e2e0a53a9079c3125ec9b8368
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Happens consistently in older versions:

Verzió: 6.0.0.3
Build az.: 64a0f66915f38c6217de274f0aa8e15618924765
CPU szálak: 4; OS: Windows 6.3; Felületmegjelenítés: alapértelmezett; 
Területi beállítások: hu-HU (hu_HU); Calc: CL

Verzió: 4.1.0.4
Build az.: 89ea49ddacd9aa532507cbf852f2bb22b1ace28

Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: hu-HU (hu_HU)

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 1 NISZ LibreOffice Team 2019-11-07 10:38:00 UTC
Created attachment 155601 [details]
Screenshot of the original document side by side in Word and Writer.
Comment 2 Xisco Faulí 2019-11-07 14:19:23 UTC
Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: b19c5d4286f66193173534980d18992682905e26
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Commit Notification 2020-03-16 21:24:33 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2be656908e9f30d0b0f795cc67096f0d673a3a21

tdf#128646 DOCX import: don't hide shape of hidden paragraph

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-03-17 09:42:30 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 4ee7ee1c4a515479bc174543af4dbc400035c0ba
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@László, thanks for fixing this issue!!