tdf#128646 DOCX import: don't hide shape of hidden paragraph

if the shape is not hidden, but it's anchored to
an empty table cell paragraph.

Change-Id: I97e42431d083d3c70ff67981676e322ca8e7f89d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90568
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>